add css and modify H5

--- a/H5.md
+++ b/H5.md
@@ -20,7 +20,7 @@
 - time
 
 target：_self、_parent、_blank、_top
-属性：hidden、tabindex、
+属性：hidden、tabindex、disabled
 ##表单元素input
 1. email
 2. url
@@ -63,8 +63,8 @@ target：_self、_parent、_blank、_top
 - 获取canvas，getContext("2d")获得上下文，设置width、height
 - 线：moveTo()、lineTo()、stroke()、strokeStyle、
 - 面：fillrRect()、arc()、fill()、fillStyle、
-- beginPath()、closePath()
+- beginPath()、closePath()、save()、restore()
 - quadraticCurveTo()
 - bezierCurveTo()
 - drawImage()
-- lineCap、lineWidth、
+- lineCap、lineWidth
